@@ -875,8 +875,13 @@ When called interactively, prompt for REGEXP."
 	(goto-char (setq beg (point-max)))
 	(save-excursion
 	  (save-restriction
+            ;; FIXME: We save excursion and restriction in "*gnus-uu-body*",
+            ;; only to immediately move to another buffer?  And we narrow in
+            ;; that buffer without save-restriction?  And we finish the
+            ;; save-restriction with a call to `widen'?  How can that
+            ;; make sense?
 	    (set-buffer buffer)
-	    (let (buffer-read-only)
+	    (let ((inhibit-read-only t))
 	      (set-text-properties (point-min) (point-max) nil)
 	      ;; These two are necessary for XEmacs 19.12 fascism.
 	      (put-text-property (point-min) (point-max) 'invisible nil)
