@@ -1,3 +1,8 @@
+2015-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-group.el (gnus-group--setup-tool-bar-update):
+	cursor-sensor-functions should be a list of functions.
+
 2015-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* gnus-group.el (gnus-tmp-*): Declare.
